examples/regressions/230_unit_is_never.an
import Std.Throw.Throw, throw

unit_neverizer {Throw Never} =
    throw ()

main () =
    handler h for throw _ -> println "threw!"
    unit_neverizer h
    println "through!"

// args: --check --no-color
// expected exit status: 1
// expected stderr:
// examples/regressions/230_unit_is_never.an:4:5
// 3 | unit_neverizer {Throw Never} =
// 4 |     throw ()	// error: No implicit found for type Throw Unit required by throw
//   |     ^^^^^
// 
// Found 1 error and 0 warnings

